hard-gists/1283684/run.log
=== Docker Run Log for 1283684 ===
Started at: Mi 29. Okt 12:04:54 CET 2025

[2025-10-29 12:04:54] START: Running container for 1283684
[2025-10-29 12:04:55] SUCCESS: Container be0d9d050c9821f89f1141376387454aee54cc6b278fd05f24182a7f3d5867aa started for 1283684
=== Container logs for 1283684 ===
  File "/snippet.py", line 24
    print 'Using',fnx
    ^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1283684 ===
[2025-10-29 12:04:57] INFO: Container be0d9d050c9821f89f1141376387454aee54cc6b278fd05f24182a7f3d5867aa has stopped
